# pymcu-micropython

./: README.md  pyproject.toml
.github/workflows/: publish.yml
examples/adc-read/: pyproject.toml
examples/adc-read/src/: main.py
examples/blink/: pyproject.toml
examples/blink/src/: main.py
examples/dht-sensor/: pyproject.toml
examples/dht-sensor/c-reference/: dht_ref.c
examples/dht-sensor/src/: dht.py  dht11.py  main.py
examples/eeprom-avr/: pyproject.toml
examples/eeprom-avr/src/: main.py
examples/lcd-i2c/: pyproject.toml
examples/lcd-i2c/src/: lcd_i2c.py  main.py
examples/lm35-sensor/: pyproject.toml
examples/lm35-sensor/src/: main.py
examples/mem8-test/: pyproject.toml
examples/mem8-test/src/: main.py
examples/pwm-demo/: pyproject.toml
examples/pwm-demo/src/: main.py
examples/signal-led/: pyproject.toml
examples/signal-led/src/: main.py
examples/uart-echo/: pyproject.toml
examples/uart-echo/src/: main.py
examples/wdt-blink/: pyproject.toml
examples/wdt-blink/src/: main.py
src/pymcu_micropython/: __init__.py  avr.py  board_chips.py  lm35.py  machine.py  micropython.py  time.py  utime.py
src/pymcu_micropython/boards/: __init__.py  arduino_mega.py  arduino_micro.py  arduino_nano.py  attiny13.py  attiny13a.py  attiny2313.py  attiny24.py  attiny25.py  attiny4313.py  attiny44.py  attiny45.py  attiny84.py  attiny85.py  digispark.py
src/whipsnake_micropython/: __init__.py  machine.py  micropython.py  utime.py
src/whipsnake_micropython/boards/: __init__.py  arduino_uno.py
src/whisnake_micropython/: __init__.py  board_chips.py  machine.py  micropython.py  utime.py
src/whisnake_micropython/boards/: __init__.py
tests/: conftest.py  test_avr.py  test_boards.py  test_integration.py  test_machine.py  test_micropython.py  test_utime.py
