[project]
name = "blink"
version = "0.1.0a1"
requires-python = ">=3.11"
dependencies = [
    "pymcu>=0.1.0a1",
    "pymcu-micropython>=0.1.0a1",
]

[tool.whip]
board     = "arduino_uno"
frequency = 16000000
sources   = "src"
entry     = "main.py"
stdlib    = ["micropython"]

[tool.whip.flash]
programmer = "avrdude"
